@@ -26,17 +26,17 @@ proc loadvfs {dll} {
 }
 
 package ifneeded vfs          1.0 [list loadvfs $dll]
-package ifneeded starkit      1.0 [list source [file join $dir starkit.tcl]]
-package ifneeded vfslib       1.3 [list source [file join $dir vfslib.tcl]]
+package ifneeded starkit      1.1 [list source [file join $dir starkit.tcl]]
+package ifneeded vfslib     1.3.1 [list source [file join $dir vfslib.tcl]]
 
 # Old
-package ifneeded mk4vfs       1.6 [list source [file join $dir mk4vfs.tcl]]
+package ifneeded mk4vfs       1.8 [list source [file join $dir mk4vfs.tcl]]
 package ifneeded zipvfs       1.0 [list source [file join $dir zipvfs.tcl]]
 
 # New
 package ifneeded vfs::ftp     1.0 [list source [file join $dir ftpvfs.tcl]]
 package ifneeded vfs::http    0.5 [list source [file join $dir httpvfs.tcl]]
-package ifneeded vfs::mk4     1.6 [list source [file join $dir mk4vfs.tcl]]
+package ifneeded vfs::mk4     1.8 [list source [file join $dir mk4vfs.tcl]]
 package ifneeded vfs::ns      0.5 [list source [file join $dir tclprocvfs.tcl]]
 package ifneeded vfs::tar     0.9 [list source [file join $dir tarvfs.tcl]]
 package ifneeded vfs::test    1.0 [list source [file join $dir testvfs.tcl]]
