@@ -1,3 +1,11 @@
+2003-02-01  Jean-Claude Wippler  <jcw@equi4.com>
+
+	* library/pkgIndex.tcl.in: mk4vfs 1.8, starkit 1.1, vfslib 1.3.1
+	* library/pkgIndex.tcl: (shouldn't this be dropped from CVS now?)
+	* library/mk4vfs.tcl:  updated from tclkit project
+	* library/starkit.tcl: updated from tclkit project
+	* library/vfslib.tcl:  updated from tclkit project
+
 2003-01-30  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* Makefile.in: only install pkgIndex.tcl for shared builds
